[package]
name = "nolock"
version = "0.2.3"
edition = "2018"
authors = ["Lol3r <lol3r@lol3r.net>"]
description = "A collection of Lock-Free Datastructures"
readme = "README.md"
repository = "https://github.com/Lol3rrr/nolock"
license = "MIT OR Apache-2.0"
keywords = ["lock-free"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
queues = []
hazard_ptr = ["queues", "lazy_static"]
hash_trie = ["hazard_ptr"]
async = ["futures"]
full = ["queues", "async"]

[dependencies]
futures = { version = "0.3", optional = true, default_features = false }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
criterion = { version = "0.3" }
tokio = { version = "1.8", features = ["rt", "macros", "test-util"] }

[[bench]]
name = "benchmarks"
harness = false
