[package]
name = "nolock"
version = "0.2.3"
edition = "2018"
authors = ["Lol3r <lol3r@lol3r.net>"]
description = "A collection of Lock-Free Datastructures"
readme = "README.md"
repository = "https://github.com/Lol3rrr/nolock"
license = "MIT OR Apache-2.0"
keywords = ["lock-free"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
queues = []
hazard_ptr = ["queues", "lazy_static", "thread_local"]
hash_trie = ["hazard_ptr"]
async = ["futures"]
full = ["queues", "async", "hazard_ptr"]

[dependencies]
futures = { version = "0.3", optional = true, default_features = false }
lazy_static = { version = "1.4", optional = true }
thread_local = { version = "1.1", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
criterion = { version = "0.3" }
iai = { version = "0.1" }
tokio = { version = "1.8", features = ["rt", "macros", "test-util"] }

[[bench]]
name = "criterion_bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false
