[package]
name = "nolock"
version = "0.4.1"
edition = "2018"
authors = ["Lol3r <lol3r@lol3r.net>"]
description = "A collection of Lock-Free Datastructures"
readme = "README.md"
repository = "https://github.com/Lol3rrr/nolock"
license = "MIT OR Apache-2.0"
keywords = ["lock-free"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
std = []
queues = []
thread_data = ["std"]
hazard_ptr = ["std", "queues", "lazy_static", "thread_data"]
hyaline = ["atomic"]
hash_trie = ["hyaline"]
allocator = ["std","lazy_static"]
async = ["futures"]
full = ["std", "queues", "allocator", "thread_data", "hazard_ptr"]

[dependencies]
futures = { version = "0.3", optional = true, default_features = false }
lazy_static = { version = "1.4", optional = true }
atomic = { version = "0.5", optional = true }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = ["checkpoint"] }

[dev-dependencies]
rand = { version = "0.8" }
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = { version = "0.3" }
iai = { version = "0.1" }
tokio = { version = "1.8", features = ["rt", "macros", "test-util"] }

[profile.bench]
debug = true

[[bench]]
name = "criterion_bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false
